urls_downloaded_cb({"token":"meson.build","urls":[{"url":"writing-subplugin-tensor-filter.html#dependencies-libraries","node_type":"p","page":"Writing tensor filter subplugin","sections":["Writing a subplugin for NNStreamer's tensor_filter","More about the template subplugin code","Dependencies / Libraries"],"context":{"gi-language":["default"]}},{"url":"writing-subplugin-tensor-filter.html#quick-guide-on-writing-a-tensor_filter-subplugin-for-a-new-frameworkhardware","node_type":"p","page":"Writing tensor filter subplugin","sections":["Writing a subplugin for NNStreamer's tensor_filter","Quick guide on writing a tensor_filter subplugin for a new framework/hardware."],"context":{"gi-language":["default"]}}]});