urls_downloaded_cb({"token":"meson.build","urls":[{"url":"writing-subplugin-tensor-filter.html#code-generator-for-tensor_filter-subplugin-in-c","node_type":"p","page":"Writing tensor filter subplugin","sections":["Quick guide on writing a tensor_filter subplugin for a new framework/hardware.","Code generator for tensor_filter subplugin in C"],"context":{"gi-language":["default"]}},{"url":"writing-subplugin-tensor-filter.html#dependencies-libraries","node_type":"p","page":"Writing tensor filter subplugin","sections":["More about the template subplugin code","Dependencies / Libraries"],"context":{"gi-language":["default"]}}]});